Fixed margin on small screens

--- a/styles.less
+++ b/styles.less
@@ -986,6 +986,7 @@ footer{
 	.grid-container{
 		max-width: 1600px;
 		margin: 0 auto;
+		padding: 0 2rem;
 	}
 }
 
